fixed layout issue

--- a/src/style.css
+++ b/src/style.css
@@ -792,6 +792,6 @@ a:visited {
 }
 @media only screen and (max-width: 480px) {
   .form .form__title {
-    margin-left: 6.5em;
+    margin-left: 5.4em;
   }
 }
